- TI-58   Delete command is not always deleting
          (thanks to Lynoure, asmyers).
- TI-61   Typo in exclusion.t.cpp
          (thanks to Thomas Lauf).
- TI-62   TimeWarrior should not ignore invalid command
- TI-64   Command 'stop' with date before current interval's start date causes
          segfault
          (thanks to Thomas Lauf).
- TI-65   The 'tags' command should support a filter
- TI-67   Summary with parameters shows wrong ids
          (thanks to Bodo Graumann)
- TI-68   Cannot shorten interval which has been moved into an exclusion.
          (thanks to A M)
- TI-69   timew config converts integers to times
          (thanks to Thomas Lauf).
- TI-70   Timew starts a new interval even if a current interval contains the
          same set of tags
          (Thanks to Thomas Babej).
- TI-73   timew move with a specific time broken on 1.1.0
          (Thanks to A M).
- TI-75   The :fill hint not properly detecting the last interval
          (Thanks to Thomas Babej).
- TI-77   timew track seems to think today is tomorrow
          (Thanks to A M).
- TI-78   Tag parsing broken for tags starting with "or_"
          (Thanks to Lukas Barth).
- TI-90   Let 'continue' accept a date or a date range
- TI-91   Timewarrior does not compile on DragonFly
          (Thanks to Michael Neumann).
- Fixed Python 3 support of the holiday/refresh script
          (thanks to Jelle van der Waa).
- Added missing man page link
          (thanks to David Patrick).
- Taskwarrior projects are now used as-is as tags, and also split on the '.' to
  represent project hierarchy as separate tags.
          (thanks to Josh Proehl).
- New date names supported (see 'timew help date' or 'man timew').
- Named dates 'socw', 'socm', 'socq' and 'socy' are now named 'sow', 'som',
  'soq' and 'soy'. Similarly the 'eocw' etc are modified. The 'c' is now
  implicit.

------ current release ---------------------------

1.0.0 (2016-08-17) 6428ce89fcf2a5665d9351c50c2a84c98543206c
