@@ -95,6 +95,18 @@ bool Range::is_ended () const
 }
 
 ////////////////////////////////////////////////////////////////////////////////
+bool Range::is_empty () const
+{
+  return start == end;
+}
+
+////////////////////////////////////////////////////////////////////////////////
+bool Range::contains (const Datetime &datetime) const
+{
+  return start <= datetime && (! is_ended () || end >= datetime);
+}
+
+////////////////////////////////////////////////////////////////////////////////
 // Detect the following overlap cases:
 //
 // this                     [--------)
